This file presents the major changes of each version, focusing on
user-visible changes while the day to day changes are in the git logs.

=======================================================================
        ___  _____ _____
__   __/ _ \|___  |___ /
\ \ / / | | |  / /  |_ \          (unamed)
 \ V /| |_| | / /  ___) |
  \_/  \___(_)_/  |____/          (not released yet)


=======================================================================
        ___  _____ ____
__   __/ _ \|___  |___ \
\ \ / / | | |  / /  __) |         Happy centenary, mamie :(
 \ V /| |_| | / /  / __/           (my grandma would have been 100 today)
  \_/  \___(_)_/  |_____|          Released on May. 26, 2024

TransTractor:
 * Remove one source of supirious error reports when writing files (GitHub's #494) [Mt].

Asciidoc:
 * Support a cleanspaces option to remove extra spaces in wrapped lines
   (GitHub's #464). Thanks Jean-Noël Avila for the pull request.

Man/Groff:
 * Handle \~ as non-breaking space.
 * Properly handle \c escape sequence in .TP parameters (Debian's #1036826) [Mt].

Markdown:
 * Treat tables as verbatim paragraphs (GitHub's #496) [Mt].

All scripts:
 * Add an option -w/--width to rewrap text on an arbitrary column (GitHub's #474)
   [Golubev Alexander].

po4a main script only:
 * Fix the behavior of --translate-only (GitHub's #482) [Mt & Golubev Alexander].

Documentation:
 * Fix typos (GitHub's #478) [Marco Ciampa & Helge Kreutzmann]
 * Kill outdated documentation on Pod parameters (GitHub's #462) [Golubev Alexander].

Translations:
 * Updated: Croatian, thanks Milo Ivir.
 * Updated: Dutch, thanks Frans Spiesschaert.
 * Updated: French, thanks brandelune and Jean-Baptiste Holcroft.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Spanish, thanks gallegonovato.

Status of the binary translation:
 * 6 languages = 100%: de, es, fr, it, ja, nl.