@@ -8,6 +8,9 @@ __   __/ _ \|___  |___ /
  \ V /| |_| | / /  ___) |
   \_/  \___(_)_/  |____/          (not released yet)
 
+General:
+ * Try to not fail when writing UTF po files with old Perl versions
+   (GitHub's #495) [Ineiev].
 
 =======================================================================
         ___  _____ ____
